@@ -1,3 +1,7 @@
+2007-07-09  Jakub Steiner <jimmac@ximian.com>
+
+	* input-gaming: generic controller icon for gaming devices
+
 2007-07-09  Lapo Calamandrei <calamandrei@gmail.com>
 
 	* */actions/edit-find* : a try at the binocular metaphor for find,
